# inw-backend-legacy

./: .gitignore  README.md  pyproject.toml
src/domain/: idea.py  tag.py  user.py
src/infrastructure/: __init__.py  database.py
src/infrastructure/database/: __init__.py  error.py  idea.py  tag.py  user.py
src/interface/: __init__.py  auth.py  me.py
src/interface/helper/: auth.py  dependencies.py  env.py  google.py  lifespan.py
src/web/: __init__.py  auth.py  me.py
src/web/helper/: auth.py  dependencies.py  env.py  google.py  lifespan.py
